Method invokes inefficient Number constructor; use static valueOf instead
git-svn-id: https://svn.apache.org/repos/asf/ant/easyant/core/trunk@1515936 13f79535-47bb-0310-9956-ffa450edef68